# ImageGenWorker

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  TESTING.md  pyproject.toml  run_tests.sh
.claude/skills/character-config/: SKILL.md
.claude/skills/comfyui-workflow/: SKILL.md
.claude/skills/image-eval/: SKILL.md  fetch_outputs.py
.claude/skills/local-batch-eval/: SKILL.md  generate_stories.py
.claude/skills/prompt-eval/: SKILL.md  fetch_outputs.py
.claude/skills/prompt-lint/: SKILL.md  lint_prompts.py
.claude/skills/story-prompts/: SKILL.md  story_template.json
.claude/skills/story-prompts-eval/: SKILL.md  lint_prompts.py
.claude/skills/story-prompts/adventure/: SKILL.md
.claude/skills/story-text/: SKILL.md
.claude/skills/story-text-eval/: SKILL.md  lint_texts.py
.claude/skills/test-writer/: SKILL.md
deploy/: README.md  deploy.sh  env.sh
deploy/stages/dev/: README.md  docker-compose.yml  down.sh  env.sh  smoke.py  smoke.sh  up.sh
deploy/stages/preprod/: deploy.sh  env.sh
deploy/stages/prod/: README.md  deploy.sh  docker-compose.yml  env.sh
imagegen/: __init__.py  comfyui_client.py  completion_builder.py  config.py  failure_classification.py  gcs.py  job_handler.py  main.py  model.py  prompt_log.py  publisher.py  puller.py  schema.py  workflow.py
imagegen/prompts/: 1_1.json  1_10.json  1_11.json  1_12.json  1_13.json  1_14.json  1_15.json  1_16.json  1_17.json  1_18.json  1_19.json  1_2.json  1_20.json  1_21.json  1_3.json  1_4.json  1_5.json  1_6.json  1_7.json  1_8.json  1_9.json  2_1.json  README.md  adventure_character.json  character.json
imagegen/templates/1/: config.json
imagegen/templates/1_1/: config.json
imagegen/templates/1_10/: config.json
imagegen/templates/1_11/: config.json
imagegen/templates/1_12/: config.json
imagegen/templates/1_13/: config.json
imagegen/templates/1_14/: config.json
imagegen/templates/1_15/: config.json
imagegen/templates/1_16/: config.json
imagegen/templates/1_17/: config.json
imagegen/templates/1_18/: config.json
imagegen/templates/1_19/: config.json
imagegen/templates/1_2/: config.json
imagegen/templates/1_20/: config.json
imagegen/templates/1_21/: config.json
imagegen/templates/1_3/: config.json
imagegen/templates/1_4/: config.json
imagegen/templates/1_5/: config.json
imagegen/templates/1_6/: config.json
imagegen/templates/1_7/: config.json
imagegen/templates/1_8/: config.json
imagegen/templates/1_9/: config.json
imagegen/templates/2/: config.json
imagegen/templates/3/: config.json
imagegen/templates/4/: config.json
imagegen/workflows/1/: config.json  workflow.json
imagegen/workflows/2/: config.json  workflow.json
operation/: sync_story_catalog.py  sync_story_catalog.sh
operation/stages/dev/: sync_story_catalog.sh
operation/stages/preprod/: sync_story_catalog.sh
operation/stages/prod/: sync_story_catalog.sh
schemas/: completion.json  job.json
scripts/: generate_stories.py  smoke_real_comfyui.py
tests/: conftest.py  run_tests.sh
tests/fakes/: comfyui.py  worker.py
tests/integration/: test_comfyui_client.py
tests/mock_comfyui/: Dockerfile  README.md  docker-compose.yml  server.py
tests/smoke/: smoke_real_comfyui.py
tests/unit/: test_comfyui_worker.py  test_completion_builder.py  test_config.py  test_failure_classification.py  test_gcs.py  test_generate_latest_tool.py  test_handler_logic.py  test_image_eval_fetch_outputs.py  test_local_generate_stories.py  test_main.py  test_model.py  test_prompt_eval_fetch_outputs.py  test_prompt_log.py  test_publisher.py  test_puller.py  test_review_app_server.py  test_schema.py  test_story_prompts_eval_linter.py  test_sync_story_catalog.py  test_workflow.py  test_workflow_qwen_edit.py
tools/: generate_latest.py
tools/review_app/: README.md  server.py
