[project]
name = "imagegen-worker"
version = "0.1.0"
description = "Stateless image-generation worker that pulls jobs from Pub/Sub."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "image-gen-contract @ git+https://github.com/tarothantaro/ImageGenContract@9d2dd1de5ad804af6bfa77ac96a874e0160d1a90",
]

[project.optional-dependencies]
runtime = [
    "google-cloud-pubsub>=2.21",
    "google-cloud-storage>=2.16",
    "httpx>=0.27",
    "websocket-client>=1.7",
]
test = [
    "pytest>=8",
    "pytest-cov>=5",
]
# Only the operation/ catalog-sync script needs Firestore (it writes story
# metadata into the API server's templates/ collection). Kept out of `runtime`
# so the worker container stays lean.
catalog = [
    "google-cloud-firestore>=2.16",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["imagegen*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
# Ship the ComfyUI workflow graphs + template configs + story/character prompt
# sets with the package so the model can resolve them at runtime in the container.
imagegen = ["workflows/**/*.json", "templates/**/*.json", "prompts/**/*.json"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["imagegen"]
omit = [
    "imagegen/main.py",
    # Thin HTTP+WebSocket glue to the real ComfyUI container; pinned by the
    # integration test against the mock ComfyUI, not by mocking the socket
    # (see TESTING.md §2.1 / §3).
    "imagegen/comfyui_client.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
fail_under = 100
show_missing = true
skip_covered = false
